--- a/index.html
+++ b/index.html
@@ -385,20 +385,15 @@
 							<!-- team member -->
 							<div class="de-team-list">
 								<div class="team-pic">
-									<img src="images/e.png" class="img-responsive" alt="">
+									<img src="images/star.jpg" class="img-responsive" alt="">
 								</div>
 								<div class="team-desc">
-									<h3>John Smith</h3>
-									<p class="lead">Expert Designer</p>
+									<h3>Onyeike Star</h3>
+									<p class="lead">Top Rated Upwork Freelancer</p>
 									<div class="small-border"></div>
-									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
+									<p class="text-info">How to Tap into Lucrative Online Opportunities</p>
 
-									<div class="social">
-										<a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-										<a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-										<a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-										<a href="#"><i class="fa fa-skype fa-lg"></i></a>
-									</div>
+									
 								</div>
 							</div>
 							<!-- team close -->
@@ -429,10 +424,10 @@
 									<img src="images/e.png" class="img-responsive" alt="">
 								</div>
 								<div class="team-desc">
-									<h3>Onyeike Star</h3>
-									<p class="lead">Top Rated Upwork Freelancer</p>
+									<h3>OK Emmanuel </h3>
+									<p class="lead">Host</p>
 									<div class="small-border"></div>
-									<p class="text-info">How to Tap into Lucrative Online Opportunities</p>
+									<p class="text-info">Break out of Broke: Expert Secrets for Earning Online</p>
 
 									
 								</div>
