Speaker image position

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                                     <div class="schedule-item">
                                                         <div class="sc-time">8:00PM(WAT) 2:00PM(EST)</div>
                                                         <div class="sc-pic">
-                                                            <img src="https://www.madebydesignesia.com/themes/exhibiz/images/team/2.jpg" class="img-circle" alt="">
+                                                            <img src="images/star.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>Chi Star</h4>
