Open Graph Meta Tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
 
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Monetize the Internet w/ OK Emmanuel" />
+    <meta property="og:description" content="How Internet Experts are making 6-figure income online and how you can too." />
+    <meta property="og:image" content="images/preview.jpg" />
+    <meta property="og:url" content="https://www.tinyurl.com/monetize-the-internet" />
+    <meta property="og:type" content="website" />
+
     <!-- CSS Files
     ================================================== -->
     <link href="https://www.madebydesignesia.com/themes/exhibiz/css/bootstrap.min.css" rel="stylesheet" type="text/css" id="bootstrap">
