--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             >
                                 <div class="spacer-single"></div>
                                     <div class="d-lg-flex justify-content-center sm-hide">
-                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-calendar-check-o id-color"></i>Saturday, 5th October </div>
+                                        <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-calendar-check-o id-color"></i>Saturday, 12th October </div>
                                         <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-user id-color"></i>3 Speakers</div>
                                         <div class="h6 padding10 pt0 pb0"><i class="i_h3 fa fa-map-marker id-color"></i>Online</div>
                                     </div>
@@ -501,7 +501,7 @@
                                 <ul class="de_nav de_nav_dark">
                                     <li class="active" data-link="#section-services-tab">
                                         <h3>Webinar <span>Day</span></h3>
-                                        <h4>Sat. 5th,October, 2024</h4>
+                                        <h4>Sat. 12th,October, 2024</h4>
                                     </li>
                                 </ul>
 
@@ -737,6 +737,10 @@
                             <a href="#section-ticket" class="btn-custom text-white scroll-to">Get Ticket</a>
                         </div>
                     </div>
+<div class="row align-items-center">
+<marquee>Sponsor: Mary Otuka </marquee>	
+</div>
+		
                 </div>
             </section>
 
